--- a/servlets/solo-web/src/main/web-resources/static/css/style.css
+++ b/servlets/solo-web/src/main/web-resources/static/css/style.css
@@ -1,43 +1,79 @@
 @charset "utf-8";
 
-html,
-body {
-    height: 100%;
+/* ==================== メインボタン ==================== */
+
+div.mainbtn {
+    margin-top: 10px;
+    text-align: left;
 }
 
-body,
-input {
-    color: #2F4F4F;
-    font-family: "Lucida Grande", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
+/* ==================== テーブル（フラットレイアウト） ==================== */
+
+div.table-flat table {
+    border-collapse: collapse;
+    font-size: 1.0em;
 }
 
-div#wrapper {
-    position: relative;
-    height: auto !important;
-    height: 100%;
-    min-height: 100%;
+div.table-flat th {
+    border: solid 1px #696969;
+    background-color: #B0C4DE;
+    padding: 4pt 8pt;
+    font-size: 1.0em;
+    vertical-align: baseline;
 }
 
-div#wrapper-inside {
-    padding-bottom: 130px;
+div.table-flat td {
+    border: solid 1px #696969;
+    background-color: #E6E6FA;
+    padding: 4pt 8pt;
+    font-size: 1.0em;
+    vertical-align: baseline;
 }
 
-div#header {
-    padding-top: 8px;
+/* ==================== テーブル（ボーダー・背景なし） ==================== */
+
+div.table-none table {
+    border: none;
+    font-size: 1.0em;
 }
 
-div#body {
+div.table-none th {
+    border: none;
+    padding: 4pt 8pt;
+    font-size: 1.0em;
+    vertical-align: baseline;
 }
 
-div#footer {
-    margin-top: 30px;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 100px;
-    position: absolute;
+div.table-none td {
+    border: none;
+    padding: 4pt 8pt;
+    font-size: 1.0em;
+    vertical-align: baseline;
 }
 
-.clear {
-    clear: both;
+div.table-none td.right {
+    text-align: right
+}
+
+/* ==================== メッセージエリア ==================== */
+
+/* メッセージエリア */
+.message-area {
+    padding: 0.5em 0;
+}
+
+.message-area ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+/* エラーメッセージ */
+.error {
+    color: #FF0000;
+}
+
+/* インフォメーションメッセージ */
+.information {
+    color: #0000FF;
 }
