--- a/servlets/solo-web/src/main/webapp/WEB-INF/tiles/views/tiles-view.xml
+++ b/servlets/solo-web/src/main/webapp/WEB-INF/tiles/views/tiles-view.xml
@@ -3,12 +3,8 @@
     "-//Apache Software Foundation//DTD Tiles Configuration 3.0//EN"
     "http://tiles.apache.org/dtds/tiles-config_3_0.dtd">
 <tiles-definitions>
-    <definition name="default" template="/WEB-INF/tiles/layouts/default.jsp">
-        <put-attribute name="header" value="/WEB-INF/jsp/common/header.jsp" />
-        <put-attribute name="footer" value="/WEB-INF/jsp/common/footer.jsp" />
-    </definition>
     <definition name="menu" extends="default">
         <put-attribute name="title" value="メニュー" />  
-        <put-attribute name="body" value="/WEB-INF/tiles/menu.jsp" />
+        <put-attribute name="body" value="/WEB-INF/tiles/views/menu.jsp" />
     </definition>
 </tiles-definitions>
